--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       <div class="content">
         <video autoplay muted loop width="240" height="240" playsinline>
           <source src="/mistune/assets/glitch.mp4" type="video/mp4">
-          <source src="/mistune/assets/glitch.webm" type="video/webm">
+          <!-- <source src="/mistune/assets/glitch.webm" type="video/webm"> -->
         </video>
 
         <h1>Mistune</h1>
