--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,12 +1,22 @@
 $backgroundColor: #fff;
 $bodyColor: #111;
-$bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+$bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol";
+
+html {
+  font-size: 16px;
+
+  @media (min-width: 1600px) {
+    font-size: 24px;
+  }
+}
 
 body {
   background: $backgroundColor;
   color: $bodyColor;
   font-family: $bodyFont;
   margin: 0;
+}
 
 html {
   scroll-behavior: smooth;
@@ -20,8 +30,70 @@ header {
 }
 
 .container {
-  width: 50rem;
+  @media (max-width: 40rem) {
+    width: auto;
+  }
+
+  width: 40rem;
   margin: auto;
+}
+
+.content {
+  p {
+    line-height: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  a {
+    color: #111;
+
+    &:hover {
+      color: #888;
+    }
+  }
+
+  h1, h2 {
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-weight: 200;
+  }
+
+  blockquote {
+    font-size: .75rem;
+    padding: 0.5rem 1rem;
+    margin: 0.8rem 0;
+    border-left: 0.25rem solid #efefef;
+    
+    p {
+      line-height: 1rem;
+      margin: .5rem;
+    }
+
+    p:first-child {
+      margin-top: 0;
+    }
+
+    p:last-child {
+      margin-bottom: 0;
+    }
+
+    @media (min-width: 30em) {
+      blockquote {
+        padding-right: 5rem;
+        padding-left: 1.25rem;
+      }
+    }
+  }
+}
+
+article, main {
+  padding: 1rem;
 }
 
 .hero {
@@ -38,13 +110,13 @@ header {
 
   h1 {
     font-size: 3rem;
-    font-family: 'Special Elite', cursive;
+    font-family: "Special Elite", cursive;
   }
 
   h2 {
     font-size: 1.75rem;
     font-weight: 200;
-    font-family: 'Special Elite', cursive;
+    font-family: "Special Elite", cursive;
   }
 
   h1, h2 {
@@ -66,10 +138,20 @@ header {
     display: inline-block;
     margin: 2rem;
 
-    transition: .2s color ease-in-out;
+    transition: 0.2s color ease-in-out;
 
     &:hover {
       color: #fff;
     }
   }
+}
+
+.commercial {
+  h3 {
+    margin: 0;
+    font-weight: 100;
+  }
+  padding: 1rem 0;
+  background: #243035;
+  color: #efefef;
 }
