finish footer add link to video

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,14 @@
 <footer>
-  <div class="container">
-
+  <div class="two-side">
+    <div class="left">
+      <p>&copy;2021 codecolorist</p>
+    </div>
+    <div class="right">
+      <p>
+        <a href="https://blog.chichou.me" target="_blank">Blog</a>
+        <a rel="noopener" href="https://twitter.com/codecolorist" target="_blank">Twitter</a>
+        <a rel="noopener" href="https://github.com/chichou" target="_blank">GitHub</a>
+      </p>
+    </div>
   </div>
 </footer>
