use relative_url tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
     <article class="first">
       <div class="content">
         <video autoplay muted loop width="120" height="120" playsinline webkit-playsinline x5-video-player-type="h5">
-          <source src="/mistune/assets/glitch.mp4" type="video/mp4">
-          <img src="/mistune/assets/fallback.png" width="120" height="120">
+          <source src="{{ '/assets/glitch.mp4' | relative_url }}" type="video/mp4">
+          <img src="{{ '/assets/fallback.png' | relative_url }}" width="120" height="120">
         </video>
 
         <h1 class="glitch" data-text="Mistune">Mistune</h1>
