--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,11 @@
 
     <article>
       <div class="container content">
-        <h3>Enough logos for bugs!</h3>
-        <p>So you are just another security researcher trying to hype?</p>
-        <p>More than that. I've even got a commercial!</p>
+        <hr>
+        <h2>Enough logos for bugs!</h2>
+        <p>- So you are just another security researcher trying to hype?<br>
+        - More than that. I've even filmed a commercial!</p>
+        <p>Just for fun.</p>
       </div>
     </article>
 
@@ -50,9 +52,9 @@
 
     <article>
       <div class="container content">
-        <h3>Disclosure eta wen</h3>
-        <p>All the bugs have been patched, including some of the exploitation techniques.
-          Hopefully the talk will be released soon</p>
+        <h3>Write-ups eta wen</h3>
+        <p>Both the bugs have been patched now, including some of the exploitation techniques.
+          Hopefully the talk will be released soon.</p>
       </div>
     </article>
     
