--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <div class="content">
         <video autoplay muted loop width="120" height="120" playsinline webkit-playsinline x5-video-player-type="h5">
           <source src="{{ '/assets/glitch.mp4' | relative_url }}" type="video/mp4">
-          <img src="{{ '/assets/fallback.png' | relative_url }}" width="120" height="120">
+          <img src="{{ '/assets/fallback.png' | relative_url }}" width="120" height="120" alt="logo">
         </video>
 
         <h1 class="glitch" data-text="Mistune">Mistune</h1>
