--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -161,6 +161,10 @@ article, main {
   color: #efefef;
 }
 
+noscript > a > img {
+  width: 100%;
+}
+
 footer {
   background: #e7e7e7;
   padding: 1rem 2rem;
