apply min-height

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -97,6 +97,7 @@ article, main {
 
 .first {
   height: 100vh;
+  min-height: 37.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
