--- a/_includes/player.html
+++ b/_includes/player.html
@@ -6,31 +6,45 @@
   </a>
 </noscript>
 <script>
-  // Load the IFrame Player API code asynchronously.
-  var tag = document.createElement('script');
-  tag.src = "https://www.youtube.com/player_api";
-  var firstScriptTag = document.getElementsByTagName('script')[0];
-  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-  // Replace the 'ytplayer' element with an <iframe> and
-  // YouTube player after the API code downloads.
   function size() {
-    const width = document.getElementById('ytplayer').parentElement.clientWidth;
+    const container = document.getElementById('ytplayer');
+    const width = container.parentElement.clientWidth;
     const height = width * 9 / 16;
     return { width, height };
   }
 
-  function onYouTubePlayerAPIReady() {
-    const { width, height } = size();
-    const player = new YT.Player('ytplayer', {
-      height,
-      width,
-      videoId: '{{ site.video }}'
-    });
+  function insertPlayer() {
+    const tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/player_api";
+    const firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
-    window.addEventListener('resize', () => {
+    window.onYouTubePlayerAPIReady = () => {
       const { width, height } = size();
-      player.setSize(width, height);
-    })
+      const player = new YT.Player('ytplayer', {
+        height,
+        width,
+        videoId: '{{ site.video }}'
+      });
+
+      window.addEventListener('resize', () => {
+        const { width, height } = size();
+        player.setSize(width, height);
+      })
+    };
+  }
+
+  if (window.IntersectionObserver) {
+    const o = new IntersectionObserver(entries => {
+      const entry = entries.pop();
+      if (entry.intersectionRatio <= 0) return;
+
+      insertPlayer();
+      o.disconnect();
+    });
+    const container = document.getElementById('ytplayer');
+    o.observe(container);
+  } else {
+    setTimeout(insertPlayer, 2000);
   }
 </script>
