lazy load fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,13 @@
 
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Special+Elite&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    </noscript>
+
+    <link rel="stylesheet" data-lazy media="print" href="https://fonts.googleapis.com/css2?family=Special+Elite&family=Ubuntu:wght@300;400&display=swap">
+    <link rel="stylesheet" data-lazy media="print" href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap">
 
     {% seo %}
   </head>
@@ -64,6 +69,12 @@
       // shitty WeChat
       document.addEventListener('WeixinJSBridgeReady', () =>
         document.querySelector('video').play(), false);
+    </script>
+    <script type="application/javascript">
+      setTimeout(() =>
+        document.querySelectorAll('link[data-lazy]').forEach(
+          e => e.setAttribute('media', 'screen')),
+      200);
     </script>
   </body>
 </html>
