--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,10 @@
         <h1 class="glitch" data-text="Mistune">Mistune</h1>
         <h2>Remote code execution vulnerabilities <br>that have been hiding for a decade</h2>
         <p>
+          <a target="_blank" rel="noopener noreferrer" 
+            href="http://i.blackhat.com/USA21/Wednesday-Handouts/us-21-Hack-Different-Pwning-IOS-14-With-Generation-Z-Bug.pdf">Slides</a>
           <a target="_blank" rel="noopener noreferrer"
-            href="https://www.blackhat.com/us-21/briefings/schedule/index.html?fbclid=IwAR3TWHTC1UXsa54x9VcdpG82Jdgd0QWgFYgAc5LWqUNxd6CWR6Hp9Dcpvqs#hack-different-pwning-ios--with-generation-z-bugz-23002">
-          Upcoming Presentation</a>
+            href="http://i.blackhat.com/USA21/Wednesday-Handouts/us-21-Hack-Different-Pwning-IOS-14-With-Generation-Z-Bug-wp.pdf">Paper</a>
         </p>
       </div>
     </article>
@@ -61,19 +62,6 @@
         {% include player.html %}
       </div>
     </section>
-
-    <article>
-      <div class="container content">
-        <h3>Write-ups eta wen</h3>
-        <p>Both the bugs have been patched now, including some of the exploitation techniques.
-          Stay tuned for our BlackHat talk!</p>
-        <p>
-          <a target="_blank" rel="noopener noreferrer"
-            href="https://www.blackhat.com/us-21/briefings/schedule/index.html?fbclid=IwAR3TWHTC1UXsa54x9VcdpG82Jdgd0QWgFYgAc5LWqUNxd6CWR6Hp9Dcpvqs#hack-different-pwning-ios--with-generation-z-bugz-23002">
-          Hack Different: Pwning iOS 14 with Generation Z Bugz (BlackHat USA 2021)</a>
-        </p>
-      </div>
-    </article>
     
     {% include footer.html %}
 
