--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,11 +32,13 @@
 
         <h1 class="glitch" data-text="Mistune">Mistune</h1>
         <h2>Remote code execution vulnerabilities <br>that have been hiding for a decade</h2>
-        <p>
+        <p class="materials">
           <a target="_blank" rel="noopener noreferrer" 
-            href="http://i.blackhat.com/USA21/Wednesday-Handouts/us-21-Hack-Different-Pwning-IOS-14-With-Generation-Z-Bug.pdf">Slides</a>
+            href="http://i.blackhat.com/USA21/Wednesday-Handouts/us-21-Hack-Different-Pwning-IOS-14-With-Generation-Z-Bug.pdf">
+              <img src="{{ '/assets/slides.svg' | relative_url }}" width="48" height="48" alt="Slides"></a>
           <a target="_blank" rel="noopener noreferrer"
-            href="http://i.blackhat.com/USA21/Wednesday-Handouts/us-21-Hack-Different-Pwning-IOS-14-With-Generation-Z-Bug-wp.pdf">Paper</a>
+            href="http://i.blackhat.com/USA21/Wednesday-Handouts/us-21-Hack-Different-Pwning-IOS-14-With-Generation-Z-Bug-wp.pdf">
+              <img src="{{ '/assets/paper.svg' | relative_url }}" width="48" height="48" alt="Paper"></a>
         </p>
       </div>
     </article>
