--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     </div>
     <div class="right">
       <p>
-        <a href="https://blog.chichou.me" target="_blank">Blog</a>
+        <a href="https://codecolor.ist" target="_blank">Blog</a>
         <a rel="noopener" href="https://twitter.com/codecolorist" target="_blank">Twitter</a>
         <a rel="noopener" href="https://github.com/chichou" target="_blank">GitHub</a>
       </p>
